--- a/assets/styles/sass/base/_navigation.scss
+++ b/assets/styles/sass/base/_navigation.scss
@@ -74,6 +74,7 @@
       display: inline;
       text-decoration: none;
       width: auto;
+      z-index: 3;
     }
   }
 
